--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 ################################################################################
 
 /.vs
+/OpenMinesweeper.Core/bin/Debug/netstandard2.0
+/OpenMinesweeper.Core/obj
+/OpenMinesweeper.NET/bin/Debug/netcoreapp3.1
+/OpenMinesweeper.NET/obj
+/bin/Debug
