--- a/OpenMinesweeper.Core/OpenMinesweeper.Core.csproj
+++ b/OpenMinesweeper.Core/OpenMinesweeper.Core.csproj
@@ -13,4 +13,8 @@
     <OutputPath>..\bin\$(Configuration)\</OutputPath>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ReflectXMLDB" Version="0.0.3" />
+  </ItemGroup>
+
 </Project>
